lighttpd: the mysql4 and mysql5 variants conflict with one another
git-svn-id: https://svn.macports.org/repository/macports/trunk@69536 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/lighttpd/Portfile
+++ b/dports/www/lighttpd/Portfile
@@ -67,7 +67,7 @@ post-install {
 }
 
 
-variant mysql4 {
+variant mysql4 conflicts mysql5 {
    depends_lib-append    port:mysql4
    configure.args-append --with-mysql=${prefix}/bin/mysql_config
 
@@ -77,7 +77,7 @@ variant mysql4 {
    }
 }
 
-variant mysql5 {
+variant mysql5 conflicts mysql4 {
    depends_lib-append    path:bin/mysql_config5:mysql5
    configure.args-append --with-mysql=${prefix}/bin/mysql_config5
 
