python26: use configure.sdkroot
git-svn-id: https://svn.macports.org/repository/macports/trunk@69537 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/python26/Portfile
+++ b/dports/lang/python26/Portfile
@@ -157,8 +157,8 @@ variant universal {
             ${worksrcpath}/configure
       }
    }
-   if {${macosx_version} == "10.4" && ${os.arch} == "powerpc"} {
-      configure.args-append   --enable-universalsdk=${developer_dir}/SDKs/MacOSX10.4u.sdk
+   if {${configure.sdkroot} != ""} {
+      configure.args-append   --enable-universalsdk=${configure.sdkroot}
    } else {
       configure.args-append   --enable-universalsdk=/
    }
