Add patches for openssl 1.0.0a compat (thanks jmr) fixes #25593
git-svn-id: https://svn.macports.org/repository/macports/trunk@69538 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/nmap/Portfile
+++ b/dports/net/nmap/Portfile
@@ -37,6 +37,9 @@ depends_lib	port:libpcap \
 
 use_bzip2	yes
 
+# remove use of md2, which is no longer provided by openssl 
+patchfiles  nse_openssl.cc.diff
+
 configure.args	--without-zenmap --without-ndiff \
 		--mandir=\\\${prefix}/share/man \
 		--infodir=\\\${prefix}/share/info \
