Force MacPorts xslt, #25234
git-svn-id: https://svn.macports.org/repository/macports/trunk@69539 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdelibs4/Portfile
+++ b/dports/kde/kdelibs4/Portfile
@@ -58,6 +58,9 @@ configure.args-append   ../${distname} \
                         -DHSPELL_INCLUDE_DIR=${prefix}/include/hunspell/ \
                         -DHSPELL_LIB_DIR=${prefix}/lib/ \
                         -DPHONON_INCLUDE_DIR=${prefix}/libexec/qt4-mac/lib/phonon.framework/ \
+                        -DLIBXSLT_INCLUDE_DIR=${prefix}/include/ \
+                        -DLIBXSLT_LIBRARIES=${prefix}/lib/libxslt.dylib \
+                        -DLIBEXSLT_LIBRARIES=${prefix}/lib/libexslt.dylib \
                         -DWITH_FAM=OFF
 
 if { [file exists ${destroot}${prefix}/lib/kde4/kspell_aspell.so] } {
