Fix for building with OpenSSL 1.0. Thanks to jmr for the patch.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69540 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/bacula/Portfile
+++ b/dports/sysutils/bacula/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 
 name             bacula
 version          5.0.2
-revision        1
+revision         1
 categories       sysutils
 platforms        darwin
 license          GPL
@@ -58,6 +58,11 @@ configure.args   --mandir=${prefix}/share/man \
                  --disable-gnome \
                  --disable-wx-console \
                  --disable-tray-monitor
+                 ac_cv_lib_ssl_EVP_PKEY_encrypt_old=yes
+
+# The ac_cv_lib_ssl_EVP_PKEY_encrypt_old=yes line above is for openssl 1.0
+# to get around an apparent bug in bacula
+
 configure.cppflags-append   -I${prefix}/ncurses
 configure.ldflags           ""
 
