swap variant from +no_* to +*, #25454
git-svn-id: https://svn.macports.org/repository/macports/trunk@69541 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdesdk4/Portfile
+++ b/dports/kde/kdesdk4/Portfile
@@ -18,17 +18,13 @@ distname            kdesdk-${version}
 checksums           sha1    f1e0bebde061d7eec994820f1c77d697efaca024 \
                     rmd160  eb4849aef699d6c64b59a475ee269bc6fee06e78
 
-depends_lib-append  port:kdelibs4 port:kdebase4-runtime \
-                    port:boost
+depends_lib-append  port:kdelibs4 port:kdebase4-runtime
 
-patchfiles-append   patch-disable-umbrello.diff
-patch.dir           ${workpath}/${distname}
+configure.args-append   ../${distname} -DWITH_Boost:BOOL=OFF
 
-configure.args-append   ../${distname}
-
-variant no_boost description {Required to build Umbrello} {
-    depends_lib-delete  port:boost
-    patchfiles-delete   patch-disable-umbrello.diff
+variant boost description {Required to build Umbrello} {
+    depends_lib-append  port:boost
+    configure.args-delete   -DWITH_Boost:BOOL=OFF
 }
 
 universal_variant   no
