Add missing backslash.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69543 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/bacula/Portfile
+++ b/dports/sysutils/bacula/Portfile
@@ -57,7 +57,7 @@ configure.args   --mandir=${prefix}/share/man \
                  --without-mysql \
                  --disable-gnome \
                  --disable-wx-console \
-                 --disable-tray-monitor
+                 --disable-tray-monitor \
                  ac_cv_lib_ssl_EVP_PKEY_encrypt_old=yes
 
 # The ac_cv_lib_ssl_EVP_PKEY_encrypt_old=yes line above is for openssl 1.0
