update version, appears to fix #25599
git-svn-id: https://svn.macports.org/repository/macports/trunk@69544 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/eigen/Portfile
+++ b/dports/math/eigen/Portfile
@@ -4,8 +4,7 @@ PortSystem          1.0
 PortGroup           cmake 1.0
 
 name                eigen
-version             2.0.12
-revision            1
+version             2.0.14
 license             GPL-2+ LGPL-3+
 categories          math science
 maintainers         nomaintainer
@@ -18,9 +17,8 @@ master_sites        http://bitbucket.org/eigen/eigen/get/
 distname            ${version}
 use_bzip2           yes
 
-checksums           md5     d0195ac20bcd91602db8ca967a21e9ec \
-                    sha1    0e7ebb5455dc11e4a3ebacb694b6747110c664ba \
-                    rmd160  1a5ba1f85d247ff4510344ce0a4efbf5408bdede
+checksums           sha1    a48526bd92722170b6d458cc8a6a72c9433c9dcb \
+                    rmd160  ac37cefec85cfa70497ed238770d05dee22ce611
 
 worksrcdir          ${name}
 
