Force MacPorts ical, #22347
git-svn-id: https://svn.macports.org/repository/macports/trunk@69545 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdepimlibs4/Portfile
+++ b/dports/kde/kdepimlibs4/Portfile
@@ -25,7 +25,10 @@ depends_lib-append  port:kdelibs4 \
                     port:openldap \
                     port:gpgme
 
-configure.args-append   ../${distname}
+configure.args-append   ../${distname} \
+                    -DLIBICALSS_LIBRARY=${prefix}/lib/libicalss.dylib \
+                    -DLIBICAL_INCLUDE_DIRS=${prefix}/include/ \
+                    -DLIBICAL_LIBRARY=${prefix}/lib/libical.dylib
 
 universal_variant   no
 
