libev: update to 3.9 (#25387)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69548 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libev/Portfile
+++ b/dports/devel/libev/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 
 name            libev
 epoch           1
-version         3.6
+version         3.9
 categories      devel
 maintainers     brett openmaintainer
 description     asynchronous event library
@@ -14,7 +14,8 @@ long_description    libev is a full-featured and high-performance event \
 homepage        http://software.schmorp.de/pkg/libev.html
 platforms       darwin
 master_sites        http://dist.schmorp.de/libev/Attic/
-checksums       sha1 547e35dd5d63e9dcd99780caa946690b605580a1
+checksums       sha1 a006a91346efd070359f4ad5c5077a0bac6fcee5 \
+                rmd160 b3a2c9a5a03be1120512d81c534b3ed4f2b39295
 configure.args      --mandir=${prefix}/share/man
 
 post-destroot {
