fix distfile, it has uppercase for the 'CAST' part.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69549 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-crypt-cast5/Portfile
+++ b/dports/perl/p5-crypt-cast5/Portfile
@@ -6,7 +6,7 @@ PortGroup			perl5 1.0
 
 version				0.05
 perl5.setup			Crypt-Cast5 ${version}
-## distfiles		Crypt-Cast5-${version}.tgz
+distfiles			Crypt-CAST5-${version}.tar.gz
 revision			0
 maintainers			ricci openmaintainer
 description			CAST5 block cipher
