--- a/dports/devel/apr/Portfile
+++ b/dports/devel/apr/Portfile
@@ -4,6 +4,7 @@ PortSystem	1.0
 
 name		apr
 version		1.4.2
+revision	1
 categories	devel
 maintainers	geeklair.net:dluke
 platforms	darwin
@@ -26,7 +27,7 @@ patchfiles	patch-configure.diff
 
 use_parallel_build	yes
 configure.ccache	no
-configure.env   ac_cv_prog_AWK=awk lt_cv_path_SED=sed
+configure.env   ac_cv_prog_AWK=awk ac_cv_path_SED=sed
 configure.args	--with-installbuilddir=${prefix}/share/apr-1/build \
 		--enable-nonportable-atomics \
 		ac_cv_func_setpgrp_void=no
