mit-scheme: add dependency on openssl since one seems to exist, and bump revision
git-svn-id: https://svn.macports.org/repository/macports/trunk@69551 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/mit-scheme/Portfile
+++ b/dports/lang/mit-scheme/Portfile
@@ -6,6 +6,7 @@ PortSystem 1.0
 name                    mit-scheme
 epoch                   1
 version                 9.0.1
+revision                1
 categories              lang
 platforms               darwin
 maintainers             dports openmaintainer
@@ -31,7 +32,8 @@ checksums               md5     92884092806dd075f103cd1e9996413c \
 
 depends_lib \
     port:xorg-libX11 \
-    port:ncurses
+    port:ncurses \
+    port:openssl
 
 post-patch  {
     reinplace "s|/usr/local|${prefix}|g" \
