--- a/dports/perl/p5-crypt-ssleay/Portfile
+++ b/dports/perl/p5-crypt-ssleay/Portfile
@@ -4,6 +4,7 @@ PortSystem            1.0
 PortGroup             perl5 1.0
 
 perl5.setup           Crypt-SSLeay 0.57
+revision              1
 maintainers           mas openmaintainer
 description           module to add SSL support to LWP
 long_description      ${description}
