dcmtk: openssl 1.0.0 compatibility; see #25608
git-svn-id: https://svn.macports.org/repository/macports/trunk@69553 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/dcmtk/Portfile
+++ b/dports/graphics/dcmtk/Portfile
@@ -54,6 +54,9 @@ post-extract {
 # Darwin 9+10 compatibility, see http://forum.dcmtk.org/viewtopic.php?t=1372
 patchfiles                  patch-config-configure.in.diff
 
+# OpenSSL 1.0.0 compatibility fix
+patchfiles-append           patch-openssl-1.0.0.diff
+
 post-patch {
     # After patching config/configure.in, autotools have to be run again.
     # Usually, we would system "cd ${worksrcpath}/config && ./autoall" here,
