--- a/dports/devel/mpfr/Portfile
+++ b/dports/devel/mpfr/Portfile
@@ -9,7 +9,7 @@ PortGroup  muniversal 1.0
 
 name                mpfr
 set base_version    3.0.0
-set patch_level     1
+set patch_level     3
 version             ${base_version}-p${patch_level}
 #version             ${base_version}
 categories          devel math
@@ -35,6 +35,14 @@ checksums \
         md5     a11aad097d688737c2f796a3de2190c7 \
         sha1    906e7a111ffcfb488307067e295af6a35a5a9d14 \
         rmd160  34696d29a854c4d5a56dbb6a81991b088ab30091 \
+    patch02 \
+        md5     1e0cf19e8f47881d9edb8dcb451da928 \
+        sha1    8d692a797f848b9b3e9b886f9e68285885fe00b0 \
+        rmd160  06c763e58524b6e5ff96e538a70ae725fe97d615 \
+    patch03 \
+        md5     e125480be61ad2f20bd75a25e43a54f4 \
+        sha1    f30cf103229b85137a5f3f368e174209ff4fa8e3 \
+        rmd160  79712f3b0d1cb1607a2a5988c980376cd6d23f10 \
     [suffix ${distname}] \
         md5     f45bac3584922c8004a10060ab1a8f9f \
         sha1    8ae8bc72ac26a0f17ad9f57c520264c056c64770 \
