Retrieve current selection of qt4_select such that the variable "current_select" is valid during stage "pre-deactivate".
git-svn-id: https://svn.macports.org/repository/macports/trunk@69555 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac/Portfile
+++ b/dports/aqua/qt4-mac/Portfile
@@ -338,6 +338,7 @@ please run:\n \
 
 pre-deactivate {
     # If this is qt4-* is selected, select 'none' & tell the user
+    set current_select [exec ${prefix}/bin/${select_port} -s]
     if { [exec ${prefix}/bin/${select_port} -s] == ${select_name} } {
         system "${prefix}/bin/${select_port} none"
         ui_msg "\
