--- a/dports/python/py26-lint/Portfile
+++ b/dports/python/py26-lint/Portfile
@@ -5,9 +5,9 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                py26-lint
-version             0.20.0
+version             0.21.1
 categories-append   devel
-maintainers         nomaintainer
+maintainers         dh openmaintainer
 description         Error (and style) checking for python
 long_description \
     Pylint is a tool that checks for errors in python code, and tries to \
@@ -23,9 +23,9 @@ homepage            http://www.logilab.org/projects/pylint/
 master_sites        http://ftp.logilab.org/pub/pylint/
 distname            pylint-${version}
 
-checksums           md5     9f5bda2719d6425a668d27a151d1721f \
-                    sha1    c706c062d3dc7a55856a3ef1c741de1fea105c88 \
-                    rmd160  24ecf91e5b2abbb99a3aaa914636cd00d77759be
+checksums           md5     70f82198cde208b9118e81a43f3c7d80 \
+                    sha1    e71ba47c1a54839a44f618d7cce5bd716b1a4987 \
+                    rmd160  04ec7d4c9b89dd9ff8f41bc453e20c5648b374ea
 
 depends_lib         port:py26-logilab-common port:py26-logilab-astng
 
