--- a/dports/math/gnudatalanguage/Portfile
+++ b/dports/math/gnudatalanguage/Portfile
@@ -5,7 +5,7 @@ PortSystem                  1.0
 
 name                        gnudatalanguage
 version                     0.9rc4
-revision                    3
+revision                    4
 categories                  math science
 maintainers                 takeshi igf.fuw.edu.pl:slayoo
 license                     GPLv2
@@ -15,22 +15,13 @@ long_description \
     A free IDL (Interactive Data Language) compatible \
     incremental compiler (ie. runs IDL programs).
 homepage                    http://gnudatalanguage.sourceforge.net/
-# cmsvlib homepage http://www.physics.wisc.edu/~craigm/idl/cmsave.html
-master_sites                sourceforge::gdl \
-                            http://www.physics.wisc.edu/~craigm/idl/down/:cmsvlib
-set gdl gdl-${version}.tar.gz
-set cmsvlib cmsvlib.tar.gz
-distfiles                   ${gdl}:gdl \
-                            ${cmsvlib}:cmsvlib
+master_sites                sourceforge
+distfiles                   gdl-${version}.tar.gz
 worksrcdir                  gdl-${version}
 
-# checksums for cmsvlib 20090505
-checksums                   ${gdl} md5     dcef0d75308a13856a799d12755c80a3 \
-                            ${gdl} sha1    ffd133b9bc213613c89952f341defb447a87bf1d \
-                            ${gdl} rmd160  504f072d4dbf30403a2e9e0ed18223537619f01a \
-                            ${cmsvlib} md5     23ce60315ba271735f73b15ff14e171a \
-                            ${cmsvlib} sha1    f9992dd40812e7bee81dd6933010ebdcb78af723 \
-                            ${cmsvlib} rmd160  bd0c4f777afb4dfc7e63a0188f385ccf19a7e18a
+checksums                   md5     dcef0d75308a13856a799d12755c80a3 \
+                            sha1    ffd133b9bc213613c89952f341defb447a87bf1d \
+                            rmd160  504f072d4dbf30403a2e9e0ed18223537619f01a
 
 depends_lib                 port:zlib \
                             port:gsl \
@@ -46,14 +37,15 @@ depends_lib                 port:zlib \
                             port:xorg-libX11 \
                             port:udunits2 \
                             port:fftw-3 \
-                            port:fftw-3-single
+                            port:fftw-3-single \
+                            port:cmsvlib
 
 patch {
    # both patches are included in the GDL CVS version - will not be needed for >0.9rc4
    reinplace "s|lib_LIBRARIES|noinst_LIBRARIES|" ${worksrcpath}/src/antlr/Makefile.am
    reinplace "s|GDLLexer lexer(istr, \"\")|GDLLexer lexer(istr, \"\", GDLParser::NONE)|" ${worksrcpath}/src/widget.cpp;
    # add the CMSVLIB installation path
-   reinplace {s|dicom"|dicom:" GDLDATADIR "/lib/cmsvlib"|} ${worksrcpath}/src/gdl.cpp
+   reinplace "s|dicom\"|dicom:${prefix}/share/cmsvlib\"|" ${worksrcpath}/src/gdl.cpp
    # Avoid using heimdal's broken fnmatch.h
    reinplace "s|<\\(fnmatch\.h\\)>|\"/usr/include/\\1\"|" ${worksrcpath}/src/file.cpp
 }
@@ -100,13 +92,6 @@ post-destroot {
    xinstall -m 755 -d ${destroot}${prefix}/share/${name}/testsuite
    eval xinstall -m 644 [glob ${worksrcpath}/testsuite/*.pro] \
       ${destroot}${prefix}/share/${name}/testsuite
-# install cmsvlib
-   xinstall -m 755 -d ${destroot}${prefix}/share/${name}/lib/cmsvlib
-   eval xinstall -m 644 [glob ${workpath}/*.pro] ${destroot}${prefix}/share/${name}/lib/cmsvlib/
-   xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}/cmsvlib
-   xinstall -m 644 ${workpath}/LICENSE.RSI ${destroot}${prefix}/share/doc/${name}/cmsvlib/
-   eval xinstall -m 644 [glob ${workpath}/*.html] ${destroot}${prefix}/share/doc/${name}/cmsvlib/
-   eval xinstall -m 644 [glob ${workpath}/savefmt.*] ${destroot}${prefix}/share/doc/${name}/cmsvlib/
 }
 
 variant mpich description {build with support for MPICH (experimental)} {
