root: add openssl dependency and increase revision to rebuild with openssl 1.0.0a
git-svn-id: https://svn.macports.org/repository/macports/trunk@69568 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/root/Portfile
+++ b/dports/science/root/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                root
 version             5.26.00b
-revision            3
+revision            4
 categories          science
 maintainers         gmail.com:mattiafrancescomoro
 license             LGPLv2.1
@@ -142,6 +142,7 @@ variant ssl description {Builds port with ssl support} {
                             --with-ssl-shared=yes \
                             --with-ssl-incdir="${prefix}/include" \
                             --with-ssl-libdir="${prefix}/lib"
+    depends_lib-append      port:openssl
 }
 
 variant builtin_ftgl description {Builds port with builtin-ftgl support} {
