acpica: maintainer update to 20100702; see #25565
git-svn-id: https://svn.macports.org/repository/macports/trunk@69570 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/acpica/Portfile
+++ b/dports/devel/acpica/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                acpica
-version             20100428
+version             20100702
 categories          devel
 platforms           darwin
 maintainers         coresystems.de:stepan
@@ -17,16 +17,17 @@ master_sites        http://www.acpica.org/download/
 
 distname            acpica-unix-${version}
 
-checksums           md5     437ec7297966a507dbbf05ce0fd61cbc \
-                    sha1    5ff8ec6b672ff71ae27e5ae700684c643d4dbdd6 \
-                    rmd160  59a8eaea119510cfa7dc0b8de40fbc9e848a015c
+checksums           md5     52fb0826e191f26eaec9e24efa025797 \
+                    sha1    fbb2001872b188871a114b494a66da05302d149e \
+                    rmd160  8a608ace98e2a6e2b550f48018391db4bce983ff 
 
 depends_build       port:bison
 
-patchfiles          acpica-unix-${version}-sema.diff
+patchfiles          acpica-unix-${version}-Makefile.diff
 
 post-patch {
-    reinplace "s,-lrt,,g" ${worksrcpath}/tools/acpiexec/Makefile
+    reinplace "s,-lrt,,g" ${worksrcpath}/tools/acpiexec/Makefile \
+                          ${worksrcpath}/compiler/Makefile
 }
 
 use_configure       no
