--- a/dports/math/libsvm/Portfile
+++ b/dports/math/libsvm/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 
 name			libsvm
 epoch			1
-version			2.9
+version			2.91
 
 categories		math
 maintainers		nomaintainer
@@ -17,9 +17,10 @@ long_description	${description} By Chih-Chung Chang and Chih-Jen Lin of National
 homepage		http://www.csie.ntu.edu.tw/~cjlin/libsvm/
 master_sites	        ${homepage}
 
-checksums           md5     c48109c825d8326d71c8c8564589736d \
-                    sha1    506725e3328b7fd78b00b99b93e5fb4c90506528 \
-                    rmd160  ff6207d399f59eea3329fd629fcdf4c399583a2b
+checksums               md5     aec07b9142ce585c95854ed379538154 \
+                        sha1    4e6b3b6dde1524af665bbce531c6776a1f4c8cba \
+                        rmd160  519dfba926e8957508e1f9a1e432b42518356b29
+
 patchfiles              patch-Makefile.diff
 
 use_configure	        no
@@ -35,8 +36,19 @@ destroot {
 
     ln -sf ${name}.${libver}.dylib ${destroot}${prefix}/lib/${name}.dylib
 
-    set docs ${destroot}${prefix}/share/doc/${name}-${version}
+    set docs ${destroot}${prefix}/share/doc/${name}
     xinstall -m 755 -d ${docs}
     xinstall -m 644 -W ${worksrcpath} COPYRIGHT README FAQ.html ${docs}
 }
 
+variant java description {Install Java JAR files} {
+    depends_lib-append  bin:java:kaffe
+
+    post-destroot {
+        set jdir ${destroot}${prefix}/share/java
+        xinstall -m 775 -d ${jdir}
+        file rename ${worksrcpath}/java ${jdir}/${name}
+    }
+}
+
+default_variants        +java
