libpaper: add sha1 checksum
git-svn-id: https://svn.macports.org/repository/macports/trunk@69575 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/libpaper/Portfile
+++ b/dports/print/libpaper/Portfile
@@ -21,7 +21,8 @@ master_sites    debian:libp/${name}/
 distname        ${name}_${my_version}
 worksrcdir      ${name}-${my_version}
 
-checksums       rmd160 564b73752c01cc1f7d56cb7e54388e90d6f3aa4a
+checksums       sha1    4767d4a76fa2e5c77b98e9f7866c3fb5aac6c158 \
+                rmd160  564b73752c01cc1f7d56cb7e54388e90d6f3aa4a
 
 patchfiles      patch-paper.c.diff  \
                 patch-paperconf.c.diff  \
