mailman: update to 2.1.13 and switch to python26; see #24785
git-svn-id: https://svn.macports.org/repository/macports/trunk@69576 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/mailman/files/patch-Defaults.py.in
+++ b/dports/mail/mailman/files/patch-Defaults.py.in
@@ -1,6 +1,6 @@
---- Mailman/Defaults.py.in.orig	Sat Mar 20 17:43:51 2004
-+++ Mailman/Defaults.py.in	Sat Mar 20 17:58:38 2004
-@@ -1132,6 +1132,12 @@
+--- Mailman/Defaults.py.in.orig	2009-12-22 12:00:43.000000000 -0600
++++ Mailman/Defaults.py.in	2010-07-10 05:33:52.000000000 -0500
+@@ -1240,6 +1240,12 @@
  if EXEC_PREFIX == '${prefix}':
      EXEC_PREFIX = PREFIX
  
