--- a/dports/mail/mailman/files/patch-mm_cfg.py.dist.in
+++ b/dports/mail/mailman/files/patch-mm_cfg.py.dist.in
@@ -1,6 +1,6 @@
---- Mailman/mm_cfg.py.dist.in.orig	Sat Mar 27 20:35:26 2004
-+++ Mailman/mm_cfg.py.dist.in	Sat Mar 27 20:47:20 2004
-@@ -42,3 +42,18 @@
+--- Mailman/mm_cfg.py.dist.in.orig	2009-12-22 12:00:43.000000000 -0600
++++ Mailman/mm_cfg.py.dist.in	2010-07-10 05:33:52.000000000 -0500
+@@ -50,3 +50,18 @@
  
  ##################################################
  # Put YOUR site-specific settings below this line.
