--- a/dports/mail/mailman/Portfile
+++ b/dports/mail/mailman/Portfile
@@ -1,9 +1,10 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem		1.0
 
 name			mailman
-version			2.1.12
+version			2.1.13
 categories		mail
 maintainers		nomaintainer
 description		Mailman, the GNU Mailing List Manager
@@ -18,13 +19,14 @@ long_description	Mailman is free software for managing electronic \
 homepage		http://www.list.org/
 master_sites		sourceforge
 extract.suffix		.tgz
-checksums           md5     d565a6d2d0ec6d2dd6936a81e1c1ca86 \
-                    sha1    6d6281f7ce322e271f0259321f4d8931ff46e6ae \
-                    rmd160  94d8d132bb37180bf4c02ccd2a5fb3862ce13b94
+
+checksums		md5     3235323ccb3e0135c10b7c66a440390b \
+			sha1    923dd78a17cbab576354b53a80443fe05f134398 \
+			rmd160  3a62b04ea0f48c3ecbe815eb927d282f765e416c
 
 platforms		darwin
 
-depends_lib		port:python25
+depends_lib		port:python26
 
 # Create a startupitem
 startupitem.create	yes
@@ -58,7 +60,7 @@ configure.args		--with-username=${mmuser} \
 			--with-cgi-gid=${cgigroup} \
 			--with-cgi-ext=.cgi \
 			--without-permcheck \
-			--with-python=${prefix}/bin/python2.5
+			--with-python=${prefix}/bin/python2.6
 
 pre-destroot {
 	addgroup	${mmgroup}
