--- a/dports/devel/cmake/Portfile
+++ b/dports/devel/cmake/Portfile
@@ -5,8 +5,8 @@ PortSystem 1.0
 PortGroup	muniversal 1.0
 
 name		cmake
-version		2.8.1
-revision	4
+version		2.8.2
+set branch	[join [lrange [split ${version} .] 0 1] .]
 categories	devel
 maintainers	css
 description	Cross-platform make
@@ -16,16 +16,14 @@ long_description	\
 	Unlike many cross-platform systems, CMake is designed to be 	\
 	used in conjunction with the native build environment.
 homepage	http://www.cmake.org/
+master_sites	http://www.cmake.org/files/v${branch}/
 platforms	darwin freebsd
-master_sites	http://www.cmake.org/files/v2.8/
-# Remove the dist_subdir line when updating to the next version of cmake
-dist_subdir ${name}/${version}_1
-checksums           md5     feadc2e5ebbfed0efc90178583503725 \
-                    sha1    e9f99cfccf8ec4fb5bbd8ca7d499771a2f1d4ebe \
-                    rmd160  71e216704ee4313640efdbefcc65c6576071ef82
 
-depends_build	port:libidn \
-		port:openssl
+checksums       md5     8c967d5264657a798f22ee23976ff0d9 \
+                sha1    272003c2fe392b211ce3b5f895ad84da2ca603cf \
+                rmd160  079b7c8cb385c59b3713a3611d7a9482f7855fe5
+
+depends_lib     port:libidn
 
 configure.args	--mandir=/share/man --docdir=/share/doc/cmake --parallel=${build.jobs}
 patchfiles	patch-CMakeFindFrameworks.cmake.diff
