devel/bzr-fastimport: Update to version 0.9.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@69578 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bzr-fastimport/Portfile
+++ b/dports/devel/bzr-fastimport/Portfile
@@ -4,9 +4,9 @@ PortSystem      1.0
 PortGroup       python26 1.0
 
 name            bzr-fastimport
-version         0.9.0-261
-set debian_version [strsed ${version} "s/-/~bzr/"]-1
-epoch           1
+version         0.9.0
+set debian_version ${version}-1
+epoch           2
 categories      devel python
 platforms       darwin
 maintainers     raimue
@@ -26,24 +26,15 @@ license       GPLv2
 homepage        https://launchpad.net/bzr-fastimport
 master_sites    https://launchpad.net/ubuntu/maverick/+source/${name}/${debian_version}/+files/
 patch_sites     https://launchpad.net/ubuntu/maverick/+source/${name}/${debian_version}/+files/
-distname        ${name}_[strsed ${version} "s/-/~bzr/"].orig
-set debian_patch ${name}_${debian_version}.diff.gz
+distname        ${name}_${version}.orig
+worksrcdir      ${name}-${version}
 
-checksums       ${distname}${extract.suffix} \
-                    md5     c3a2d5e1f45dccb3a2b76cf432bdcb39 \
-                    sha1    08892265a9bef72de16236982f894058bf11055b \
-                    rmd160  5171532cc9819d4ea48fc77637f74d35f9bd2034 \
-                ${debian_patch} \
-                    md5     21b7160288109f9c99c486ef434ca66c \
-                    sha1    b9c0f2a1916372e9c74d62f8211bd95959f8ab31 \
-                    rmd160  76b1ccd12fa7c810ae9637203fb6cb1fc295ccf2
+checksums       md5     38cd1f22f598f34b75d4fbeda2bc2c61 \
+                sha1    9b672a51433d34a4cf876a230db2b21bfde126c5 \
+                rmd160  84182cce0fb2640a5ee3253b2465bcc40aa1d662
 
 depends_lib-append port:bzr
 
-patchfiles      ${debian_patch}
-patch.args	-p1
-
 livecheck.type  regex
 livecheck.url   https://launchpad.net/ubuntu/maverick/+source/${name}
-livecheck.version [strsed ${version} "s/-/~bzr/"]
-livecheck.regex {bzr-fastimport_(\d+(?:\.\d+)*~bzr\d+).orig.tar.gz}
+livecheck.regex {bzr-fastimport_(\d+(?:\.\d+)*)\.orig\.tar}
