emulators/qemu: Add dependency on texi2html, fix building with texi2html@>=5.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@69581 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/emulators/qemu/Portfile
+++ b/dports/emulators/qemu/Portfile
@@ -23,8 +23,10 @@ checksums               md5     93e6b134dff89b2799f57b7d9e0e0fc5 \
                         rmd160  dbf5e02812b0df076e4ec8c20b7c382f7507645e
 
 patchfiles              patch-configure.diff \
-                        patch-cocoa.m
+                        patch-cocoa.m \
+                        patch-texi2html.diff
 
+depends_build           port:texi2html
 depends_lib             port:curl \
                         port:cyrus-sasl2 \
                         port:gnutls \
