postfix: fix dovecot_sasl variant (#25615)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69582 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/postfix/Portfile
+++ b/dports/mail/postfix/Portfile
@@ -184,6 +184,6 @@ variant postgresql84 conflicts postgresql83 description "add postgresql support 
     lappend AUXLIBS "-L${prefix}/lib/postgresql84" -lpq
 }
 
-variant dovecot_sasl description "add Dovecot SASL support " {
-    lappend CCARGS  -DUSE_SASL_AUTH -DDEF_SERVER_SASL_TYPE=\\\\\\"dovecot\\\\\\"
+variant dovecot_sasl description "add Dovecot SASL support" {
+    lappend CCARGS  -DUSE_SASL_AUTH -DDEF_SERVER_SASL_TYPE="dovecot"
 }
