--- a/dports/aqua/TeXShop/Portfile
+++ b/dports/aqua/TeXShop/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 PortGroup       xcode 1.0
 
 name            TeXShop
-version         2.34
+version         2.36
 categories      aqua editors
 license         GPLv2+
 maintainers     snc openmaintainer
@@ -22,9 +22,9 @@ use_zip         yes
 distname        texshopsource
 dist_subdir     ${name}/${version}
 worksrcdir      texshopsource
-checksums           md5     54316c73570281c09b1654274b2b864e \
-                    sha1    7b6b5e9397a13a3a615de37f4d36dc506da87630 \
-                    rmd160  3ea4e6eab700679bef232c713e4108a383771f62
+
+checksums           sha1    7854c250b8f190e7b226e4a4c20de6cc56ab90c5 \
+                    rmd160  985543f5f3c73b2433c4ab07e0a89947cfa5fb26
 
 # force 32-bit, ticket #20291
 if {$build_arch == "x86_64"} {
