--- a/dports/devel/virtuoso/Portfile
+++ b/dports/devel/virtuoso/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                virtuoso
 conflicts           unixODBC
-version             6.1.1
+version             6.1.2
 categories          devel
 maintainers         snc openmaintainer
 license             GPL
@@ -17,9 +17,8 @@ homepage            http://${name}.openlinksw.com/dataspace/dav/wiki/Main/
 master_sites        http://downloads.sourceforge.net/project/${name}/${name}/${version}
 distname            ${name}-opensource-${version}
 
-checksums           md5     0695bffacf78e53733c27e96c9d7f9e7 \
-                    sha1    8a51e4db4b185103e2a132949ad35a872c454025 \
-                    rmd160  c21665e5d362880778f3bafad113ae502dfe65e3
+checksums           sha1    fdcc79c230aaa6f63d2796659ec96ebfc571ac97 \
+                    rmd160  3aaeeca67fa5ac7d6c60017b58c0f830afc9ce7e
 
 use_parallel_build  no
 
