add openssl dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@69588 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/ctorrent/Portfile
+++ b/dports/net/ctorrent/Portfile
@@ -11,6 +11,7 @@ PortSystem          1.0
 
 name                ctorrent
 version             3.3.2
+revision            1
 homepage            http://sourceforge.net/projects/dtorrent/
 categories          net
 
@@ -24,6 +25,7 @@ maintainers         rene \
                     openmaintainer
 
 platforms           darwin
+depends_lib         port:openssl
 
 master_sites        sourceforge:dtorrent
 distname            ${name}-dnh${version}
