add openssl dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@69589 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gconf/Portfile
+++ b/dports/gnome/gconf/Portfile
@@ -7,6 +7,7 @@ PortGroup       muniversal 1.0
 name            gconf
 set my_name     GConf
 version         2.26.2
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nomaintainer
 categories      gnome
@@ -35,6 +36,7 @@ depends_build   port:pkgconfig \
 depends_lib     port:gtk2 \
                 port:dbus-glib \
                 port:policykit \
+                port:openssl \
                 port:orbit2
 
 configure.cppflags-append -L${prefix}/lib
