--- a/dports/gnome/gnome-vfs-monikers/Portfile
+++ b/dports/gnome/gnome-vfs-monikers/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		gnome-vfs-monikers
 version		2.15.3
+revision    1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	Bonobo components for gnome-vfs.
 long_description \
@@ -21,6 +22,7 @@ checksums	md5 b16f0db0482263be3318e269f52bb5b6 \
 
 depends_lib	\
 		port:gnome-vfs \
+        port:openssl \
 		port:libbonobo
 
 use_bzip2 	yes
