--- a/dports/multimedia/gtkpod/Portfile
+++ b/dports/multimedia/gtkpod/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                gtkpod
 version             0.99.14
+revision            1
 categories          multimedia gnome
 platforms           darwin
 maintainers         rmsfisher openmaintainer
@@ -21,6 +22,7 @@ depends_lib         port:autoconf \
                     port:gnome-vfs \
                     port:libglade2 \
                     port:libgpod \
+                    port:openssl \
                     port:libid3tag
 configure.args      --mandir=${prefix}/share/man --without-ogg --without-flac
 patchfiles          patch-src_Makefile.in.diff
