add openssl dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@69592 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gst-plugins-base/Portfile
+++ b/dports/gnome/gst-plugins-base/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                gst-plugins-base
 version             0.10.29
+revision            1
 description         This is gst-plugins, a set of plug-ins for GStreamer.
 long_description    ${description}
 maintainers         rmsfisher openmaintainer
@@ -28,6 +29,7 @@ depends_lib	\
     port:liboil \
     port:libogg \
     port:libtheora \
+    port:openssl \
     port:libvorbis
 
 use_autoreconf      yes
