add openssl dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@69593 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/libewf/Portfile
+++ b/dports/security/libewf/Portfile
@@ -4,12 +4,14 @@ PortSystem 1.0
 
 name		libewf
 version		20100119
-revision	0
+revision	1
 categories	security
 maintainers	darkart.com:opendarwin.org
 description	Libewf is a library for support of the Expert Witness Compression Format
 homepage    http://libewf.sourceforge.net/
 platforms	darwin
+
+depends_lib port:openssl
 
 long_description Libewf is a library for support of the Expert Witness \
 		Compression Format (EWF), it support both the SMART \
