add openssl dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@69594 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/virtuoso/Portfile
+++ b/dports/devel/virtuoso/Portfile
@@ -6,6 +6,7 @@ PortSystem          1.0
 name                virtuoso
 conflicts           unixODBC
 version             6.1.2
+revision            1
 categories          devel
 maintainers         snc openmaintainer
 license             GPL
@@ -24,7 +25,7 @@ use_parallel_build  no
 
 depends_build       port:gawk
 
-depends_lib         port:libiodbc
+depends_lib         port:libiodbc port:openssl
 
 livecheck.url       http://sourceforge.net/api/file/index/project-id/161622/mtime/desc/rss?path=/virtuoso
 livecheck.type      regex
