--- a/dports/lang/python24/Portfile
+++ b/dports/lang/python24/Portfile
@@ -5,7 +5,7 @@ PortGroup select 1.0
 
 name                    python24
 version                 2.4.6
-revision                5
+revision                6
 set major               [lindex [split $version .] 0]
 set branch              [join [lrange [split ${version} .] 0 1] .]
 categories              lang
@@ -41,7 +41,7 @@ patchfiles              patch-configure \
                         patch-configure-badcflags.diff \
                         patch-configure-arch_only.diff
 
-depends_lib             port:gettext
+depends_lib             port:gettext port:openssl
 
 configure.args          --with-cxx=${configure.cxx} \
                         --enable-shared \
