add openssl dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@69596 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/mediatomb/Portfile
+++ b/dports/net/mediatomb/Portfile
@@ -6,6 +6,7 @@ PortGroup           archcheck 1.0
 
 name                mediatomb
 version             0.12.1
+revision            1
 categories          net multimedia
 platforms           darwin
 maintainers         gmail.com:yattenator
@@ -24,6 +25,7 @@ checksums           md5     e927dd5dc52d3cfcebd8ca1af6f0d3c2 \
                     rmd160  ecb61ca2483f76421beef1036ac442b8f805fa96
 
 depends_lib         port:libiconv port:zlib port:spidermonkey \
+                    port:openssl \
                     port:file port:curl port:libexif port:expat
 
 archcheck.files     lib/libiconv.dylib \
