--- a/dports/www/rtmpdump/Portfile
+++ b/dports/www/rtmpdump/Portfile
@@ -1,11 +1,15 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
 name                rtmpdump
 version             2.2
+revision            1
 categories          www net
 platforms           darwin
+depends_lib         port:openssl
+
 maintainers         gmail.com:captsolo openmaintainer
 description         a tool for downloading RTMP streaming media
 long_description    A small dumper for media content streamed over \
