add openssl dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@69599 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/xmlrpc-c/Portfile
+++ b/dports/devel/xmlrpc-c/Portfile
@@ -1,9 +1,11 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
 
 name		xmlrpc-c
 version		1.06.38
+revision    1
 categories	devel www
 maintainers	nomaintainer
 description	Lightweight RPC library based on XML and HTTP
@@ -24,6 +26,7 @@ checksums	md5     3ddfda82b131cbbd8a5d0b80a4309d8d \
 extract.suffix	.tgz
 
 depends_lib	port:libwww \
+            port:openssl \
 		port:curl
 
 universal_variant	no
