nzbget: update to 0.7.0 and switch from openssl to gnutls due to problems with openssl 1.0.0a; see #25618
git-svn-id: https://svn.macports.org/repository/macports/trunk@69608 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/nzbget/Portfile
+++ b/dports/net/nzbget/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name            nzbget
-version         0.6.0
-revision        1
+version         0.7.0
 categories      net
 maintainers     nomaintainer
 
@@ -18,20 +17,19 @@ homepage        http://sourceforge.net/projects/nzbget/
 platforms       darwin
 master_sites    sourceforge
 
-checksums       md5     eb95b3930abffb570e37af8d284c1f9d \
-                sha1    c01b455e221c6075f7543de7d953966a527a6b6e \
-                rmd160  7dacc0a24efb66019de99fd6b143c97a559883ba
+checksums       md5     27971846aba75f5e312d80dce7edbc5d \
+                sha1    e47cfcc37adbb756f4b449914cbfc6dcaaeebaec \
+                rmd160  b8ff4d454a51f5d1a5b4246437adad57c918500c
 
 depends_build   port:pkgconfig
 depends_lib     port:libsigcxx2 \
-                port:openssl \
+                port:gnutls \
                 port:libpar2 \
                 port:libxml2
 
-configure.args  LIBS=-lcrypto \
-                --with-tlslib=OpenSSL \
-                --with-openssl-includes=${prefix}/include/openssl \
-                --with-openssl-libraries=${prefix}/lib \
+configure.args  --with-tlslib=GnuTLS \
+                --with-libgnutls-includes=${prefix}/include/gnutls \
+                --with-libgnutls-libraries=${prefix}/lib \
                 --mandir=${prefix}/share/man
 
 post-destroot {
