--- a/dports/mail/gnupg2/Portfile
+++ b/dports/mail/gnupg2/Portfile
@@ -1,9 +1,11 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; truncate-lines: t; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem      1.0
 
 name            gnupg2
 version         2.0.13
+revision        1
 categories      mail security
 maintainers     waqar boeyms
 description     GNU pretty-good-privacy package
@@ -45,6 +47,7 @@ depends_lib     port:libiconv           \
                 port:libgcrypt          \
                 port:libgpg-error       \
                 port:pth                \
+                port:curl               \
                 port:libusb-compat
 
 patchfiles      patch-configure.diff
