--- a/dports/net/quvi/Portfile
+++ b/dports/net/quvi/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                quvi
 version             0.2.0
+revision            1
 categories          net www
 license             GPLv3
 maintainers         openmaintainer snc
