--- a/dports/gnome/gnome-media/Portfile
+++ b/dports/gnome/gnome-media/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            gnome-media
 version         2.26.0
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     A collection of utilities for simple multimedia handling.
 long_description	\
