net/wireshark-devel: Maintainer update to version 1.4.0rc1, closes #25594
git-svn-id: https://svn.macports.org/repository/macports/trunk@69616 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/wireshark-devel/Portfile
+++ b/dports/net/wireshark-devel/Portfile
@@ -4,8 +4,7 @@
 PortSystem 1.0
 
 name            wireshark-devel
-version         1.3.5
-revision        1
+version         1.4.0rc1
 categories      net
 maintainers     gmail.com:hsivank
 description     Graphical network analyzer and capture tool
@@ -23,9 +22,9 @@ master_sites    http://www.wireshark.org/download/src/ \
 
 use_bzip2       yes
 
-checksums       md5     770cb579604fa5331b8900938b39f23f \
-                sha1    7562e200026fcc54289d5938cc91a30b2e18108b \
-                rmd160  cfbb08dc67a67bddcaa2d579b0990dc3522e840c
+checksums       md5     ca5ee30ed798900142d9cd4d81637b58 \
+                sha1    35978e507966d18fefcf63f8746dbd31d2cb94ac \
+                rmd160  0518fe9acf84867360086acb3dde930f0862dae7
 
 conflicts       wireshark
 
