--- a/dports/sysutils/iRecovery/Portfile
+++ b/dports/sysutils/iRecovery/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name            iRecovery
 version         0.01
+revision        1
 categories      sysutils
 maintainers     blair
 description     Console client for iBoot/iBSS iPhone, iPod touch and iPad
@@ -22,7 +23,8 @@ git.branch      b4f662f2133f47e2c93a2bd1953ae2625232e4ae
 
 platforms       darwin
 
-depends_lib     port:libusb-compat
+depends_lib     port:libusb-compat \
+                port:readline
 
 use_configure   no
 
@@ -33,6 +35,5 @@ destroot {
        
         set sharedir ${destroot}${prefix}/share/doc/${name}
         xinstall -d ${sharedir} 
-        xinstall ${worksrcpath}/LICENSE ${sharedir}
-        xinstall ${worksrcpath}/README ${sharedir}
+        xinstall -m 0644 -W ${worksrcpath} LICENSE README ${sharedir}
 }
