add openssl dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@69618 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/seahorse-plugins/Portfile
+++ b/dports/gnome/seahorse-plugins/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		seahorse-plugins
 version		2.26.2
+revision    1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	Seahorse plugins.
 long_description ${description}
@@ -25,6 +26,7 @@ depends_build   port:p5-xml-parser \
 
 depends_lib     port:seahorse \
                 port:nautilus \
+                port:openssl \
                 port:gnome-panel
 
 configure.args  --disable-epiphany \
