--- a/dports/php/php5-openssl/Portfile
+++ b/dports/php/php5-openssl/Portfile
@@ -4,6 +4,7 @@ PortSystem              1.0
 PortGroup               php5extension 1.0
 
 php5extension.setup     openssl 5.3.2 bundled
+revision                1
 categories-append       devel security
 platforms               darwin
 maintainers             ryandesign
@@ -17,6 +18,8 @@ long_description        ${description}
 checksums               md5     46f500816125202c48a458d0133254a4 \
                         sha1    79ea4ee3da3a7542d1e348ac963a5b38bcbb4b6b \
                         rmd160  60a8aac0d51511ecaf8dcad9d31bdf072c0c99cf
+
+depends_lib-append      port:openssl
 
 post-extract {
     move ${build.dir}/config0.m4 ${build.dir}/config.m4
