Updated "crimson fields"
git-svn-id: https://svn.macports.org/repository/macports/trunk@69621 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/CrimsonFields/Portfile
+++ b/dports/games/CrimsonFields/Portfile
@@ -3,10 +3,10 @@
 PortSystem              1.0
 
 name                    CrimsonFields
-version                 0.4.9
+version                 0.5.3
 categories              games
 platforms               darwin
-maintainers             nomaintainer
+maintainers             phw openmaintainer
 
 description             Tactical war game in the tradition of Battle Isle
 long_description        Crimson Fields is a tactical war game in the tradition \
@@ -17,7 +17,10 @@ long_description        Crimson Fields is a tactical war game in the tradition \
 homepage                http://crimson.seul.org
 master_sites            ${homepage}/files/
 distname                crimson-${version}
-checksums               md5 c1ae6de5637efb9223b70c29e10de75b
+checksums           md5     9e71bc8c12ddadf42136a3e07ae86a2c \
+                    sha1    f71b1fc5eecd262d1e7bdafd259f3b061e6c9477 \
+					rmd160  21a008cfca5afce0df2349ec87bf1550fbb25d3a
+
 
 use_bzip2               yes
 
