--- a/dports/python/py26-libdnet/Portfile
+++ b/dports/python/py26-libdnet/Portfile
@@ -25,7 +25,7 @@ homepage                http://libdnet.sourceforge.net
 master_sites            sourceforge:libdnet
 distname                libdnet-${version}
 
-depends_lib	      port:libdnet
+depends_lib		port:python26 port:libdnet
 
 checksums		md5 04c394ed8e1e7fc455456e79e908916d \
 			sha1 e2ae8c7f0ca95655ae9f77fd4a0e2235dc4716bf \
