net/pidgin: Maintainer update to 2.7.1, closes #25127
git-svn-id: https://svn.macports.org/repository/macports/trunk@69627 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/pidgin/Portfile
+++ b/dports/net/pidgin/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                pidgin
-conflicts           finch
-version             2.7.0
+version             2.7.1
 categories          net
 platforms           darwin
 maintainers         otherware.org:nefar
@@ -20,9 +19,9 @@ long_description    Pidgin is an Open Source clone of America OnLine's \
 
 homepage            http://www.pidgin.im/
 master_sites        sourceforge
-checksums           md5     63a36f91d29f5ac5a402ffd2d7dbbb72 \
-                    sha1    7170aaae5e6f4039870eb5e0c5837d55285b758f \
-                    rmd160  45e4b5a9acb9c4080ce6b33cedbf9b962883ca25
+checksums           md5     0dd2adb9e8214ac960f956823c84e7e2 \
+                    sha1    b746720cc3e65b3d6da6eab0729f26673f997849 \
+                    rmd160  5e5deec529b1c8d75cd3f925b3f5e4f5310e42e5
 use_bzip2           yes
 
 depends_build       port:libtool
@@ -38,8 +37,6 @@ depends_lib         port:audiofile \
                     port:nss \
                     port:p5-xml-parser \
                     port:intltool
-
-patchfiles          gst.diff
 
 # nss is not universal
 universal_variant   no
@@ -65,9 +62,18 @@ configure.args      --disable-avahi \
 
 # --disable-dependency-tracking was added because a +universal perl will result in
 # PERL_CFLAGS containing multiple -arch arguments... this is the easiest workaround
-
 configure.ldflags-append    -bind_at_load
 configure.cppflags-append   -no-cpp-precomp
+
+variant finch_only requires finch description {Build without pidgin} {
+    configure.args-append   --disable-gtkui \
+                            --without-x
+}
+
+variant finch description {Build with finch} {
+    configure.args-delete   --disable-consoleui
+    patchfiles-append          patch-finch_libgnt_Makefile.in.diff patch-finch_libgnt_gntwm.c
+}
 
 post-destroot {
     fs-traverse file ${destroot}${prefix}/lib/perl5 {
@@ -86,10 +92,7 @@ variant no_x11 {
 }
 
 variant quartz requires no_x11 {
-    patchfiles-append       gtkdocklet-quartz.diff
-
-    configure.args-append   --disable-gestures \
-                            --enable-gtkstatusicon
+    configure.args-append   --disable-gestures
 
     depends_build           port:autoconf \
                             port:automake \
