lang/clojure: Maintainer update, closes #23366
git-svn-id: https://svn.macports.org/repository/macports/trunk@69628 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/clojure/Portfile
+++ b/dports/lang/clojure/Portfile
@@ -6,6 +6,7 @@ name                clojure
 conflicts           clojure-devel
 version             1.1.0
 epoch               20091231
+revision            1
 categories          lang java
 maintainers         gmail.com:mdippery
 description         The Clojure programming language
@@ -27,10 +28,6 @@ use_zip             yes
 use_configure       no
 build               {}
 
-variant readline conflicts rlwrap description {Use readline support} {
-    depends_run-append port:jline
-}
-
 variant rlwrap conflicts readline description {Use rlwrap support for tab completion, parenthesis matching} {
     depends_run-append port:rlwrap
 }
@@ -42,10 +39,6 @@ destroot {
     set clojurebindir ${clojuredir}/bin
     set clojurebin ${clojurebindir}/clj
     set clojuresh clj.sh
-    
-    if {[variant_isset readline]} {
-        set clojuresh clj-jline.sh
-    }
     
     if {[variant_isset rlwrap]} {
         set clojuresh clj-rlwrap.sh
