lang/clojure: Fix conflict with non-existing variant after r69628.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69629 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/clojure/Portfile
+++ b/dports/lang/clojure/Portfile
@@ -28,7 +28,7 @@ use_zip             yes
 use_configure       no
 build               {}
 
-variant rlwrap conflicts readline description {Use rlwrap support for tab completion, parenthesis matching} {
+variant rlwrap description {Use rlwrap support for tab completion, parenthesis matching} {
     depends_run-append port:rlwrap
 }
 
