--- a/dports/graphics/poppler/Portfile
+++ b/dports/graphics/poppler/Portfile
@@ -40,6 +40,7 @@ post-patch {
 }
 
 configure.args \
+    --disable-poppler-qt \
     --disable-poppler-qt4 \
     --enable-xpdf-headers \
     --enable-zlib \
