dbus: use notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@69632 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/dbus/Portfile
+++ b/dports/devel/dbus/Portfile
@@ -153,28 +153,17 @@ pre-activate {
     }
 }
 
+set sudo ""
+if {![variant_isset no_root]} {
+    set sudo "sudo "
+}
 post-activate {
     file attributes ${prefix}/var/run/dbus -group ${dbus_group} -owner ${dbus_user}
     file attributes ${prefix}/libexec/dbus-daemon-launch-helper -group ${dbus_group}
     
-    if { ![variant_isset no_startupitem] } {
-        if { ! [variant_isset no_root] } {
-            set sudo "sudo "
-            file attributes /Library/LaunchAgents/org.freedesktop.dbus-session.plist -owner root -group wheel
-            file attributes /Library/LaunchDaemons/[file tail ${plistFl}] -owner root -group wheel
-        } else {
-            set sudo ""
-        }
-        
-        ui_msg "#################################################################################################"
-        ui_msg "# Startup items have been generated that will aid in"
-        ui_msg "# starting ${name} with launchd. They are disabled"
-        ui_msg "# by default. Execute the following command to start them,"
-        ui_msg "# and to cause it to launch at startup:"
-        ui_msg "#"
-        ui_msg "# ${sudo}launchctl load -w ${startup_root}/Library/LaunchDaemons/[file tail ${plistFl}]"
-        ui_msg "# launchctl load -w ${startup_root}/Library/LaunchAgents/org.freedesktop.dbus-session.plist"
-        ui_msg "##################################################################################################"
+    if { ![variant_isset no_startupitem] && ![variant_isset no_root] } {
+        file attributes /Library/LaunchAgents/org.freedesktop.dbus-session.plist -owner root -group wheel
+        file attributes /Library/LaunchDaemons/[file tail ${plistFl}] -owner root -group wheel
     }
 }
 
@@ -183,6 +172,17 @@ variant test description {enable tests} {
 }
 
 variant no_startupitem description {Do not install startup files.} {}
+if {![variant_isset no_startupitem]} {
+    notes "############################################################################
+# Startup items have been generated that will aid in
+# starting ${name} with launchd. They are disabled
+# by default. Execute the following command to start them,
+# and to cause them to launch at startup:
+#
+# ${sudo}launchctl load -w ${startup_root}/Library/LaunchDaemons/[file tail ${plistFl}]
+# launchctl load -w ${startup_root}/Library/LaunchAgents/org.freedesktop.dbus-session.plist
+############################################################################"
+}
 
 variant no_root description {Run the DBUS daemon as MacPorts install user.} {
     pre-fetch {
