gimp: bump version to 2.6.9, mark as noarch, fix logic for choosing when to add carbon-based deps, remove unnecessary lines
git-svn-id: https://svn.macports.org/repository/macports/trunk@69634 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/gimp/Portfile
+++ b/dports/graphics/gimp/Portfile
@@ -4,12 +4,13 @@
 PortSystem 1.0
 
 name            gimp
-version         2.6.8
+version         2.6.9
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      graphics
 maintainers     devans
 homepage        http://www.gimp.org/
 platforms       darwin
+supported_archs noarch
 
 description     The Gimp - Batteries Included
 long_description \
@@ -30,18 +31,16 @@ depends_lib     port:icns-gimp \
 platform macosx {
     depends_lib-append  port:gimp-app
     #
-    # these use the deprecated QuickDraw API that is no longer
-    # supported on snow leopard #21391
+    # these use the deprecated QuickDraw API that is not available
+    # in a 64-bit version - ticket #21391
     #
-    if { "darwin" == ${os.platform} && 10 > ${os.major} } {
+    if { "darwin" == ${os.platform} && ![string match *64* $build_arch] } {
         depends_lib-append  port:macclipboard-gimp \
                             port:macfile-gimp
     }
 }
 
 distfiles
-master_sites
-use_bzip2       yes
 use_configure   no
 build           {}
 
