darwinbuild depends on tcl
git-svn-id: https://svn.macports.org/repository/macports/trunk@69638 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/darwinbuild/Portfile
+++ b/dports/devel/darwinbuild/Portfile
@@ -28,7 +28,8 @@ svn.revision	HEAD
 worksrcdir	${distname}
 
 depends_lib-append	port:sqlite3 \
-			port:openssl
+			port:openssl \
+			port:tcl
 
 xcode.configuration 	Public
 xcode.target		world
